home slide dynamic

--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -95,7 +95,7 @@
             <!-- MENU -->
             <div>
                 <ul id="Menu">
-                    <li><a href="{% url "core:home" %}" class="active">صفحه نخست</a></li>
+{#                    <li><a href="{% url "core:home" %}" class="active">صفحه نخست</a></li>#}
                     <li><a href="{% url "store:service_home" %}">خدمات</a></li>
                     <li><a href="{% url "store:event_home" %}">رویداد ها</a></li>
                     <li><a href="{% url "store:learning_home" %}">آموزش</a></li>
