--- a/apps/core/static/core/css/saeid.css
+++ b/apps/core/static/core/css/saeid.css
@@ -5,11 +5,58 @@
 .errorlist {
     text-align: left;
 }
-.blog-index-pic{
+
+.blog-index-pic {
     height: 30vh;
     object-fit: cover;
 }
-.home-slide-pic{
+
+.home-slide-pic {
     height: 50vh;
     object-fit: cover;
+}
+
+.s-footer {
+    min-height: 300px;
+    background-color: #99C0CF;
+    padding: 3rem;
+}
+
+.s-footer p {
+    font-weight: 550;
+}
+
+
+.social-icon-blue {
+    color: white;
+    font-size: 1.2rem;
+    display: inline-block;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 50px #2A99CE;
+    padding: 0.5rem 0.5rem;
+}
+
+.social-icon-red {
+    color: white;
+    font-size: 1.2rem;
+    display: inline-block;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 50px #2A99CE;
+    padding: 0.5rem 0.5rem;
+}
+.social-icon-inst {
+    color: white;
+    font-size: 1.2rem;
+    display: inline-block;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 50px #C635AE;
+    padding: 0.5rem 0.5rem;
+}
+.social-icon-green {
+    color: white;
+    font-size: 1.2rem;
+    display: inline-block;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 50px #23C261;
+    padding: 0.5rem 0.5rem;
 }
