--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -137,6 +137,76 @@
             </div>
             {% block content %}
             {% endblock content %}
+
+            <div class="s-footer">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h2>
+                        <span class="text-black border-bottom border-secondary p-1">
+                                آراد مهاجر
+                        </span>
+                        </h2>
+                        <p class="text-black p-2" style="font-size: 0.9rem; text-align: justify;">
+                            این یک نوشته آزمایشی است که به طراحان و برنامه نویسان کمک میکند تا این
+                            عزیزان با بهره گیری از این نوشته تستی و آزمایشی بتوانند نمونه تکمیل شده از پروژه و طرح
+                            خودشان را به کارفرما نمایش دهند، استفاده از این متن تستی می تواند سرعت پیشرفت پروژه را
+                            افزایش دهد،
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>
+                        <span class="text-black border-bottom border-secondary p-1">
+                                لینک های مفید
+                        </span>
+                        </h2>
+                        <ul class="px-4">
+                            <li class="text-black pt-2 ">وبلاگ</li>
+                            <li class="text-black ">قوانین و مقررات</li>
+                            <li class="text-black ">درباره ما</li>
+                            <li class="text-black ">تماس با ما</li>
+                            <li class="text-black ">وبلاگ</li>
+                            <li class="text-black ">قوانین و مقررات</li>
+                            <li class="text-black ">درباره ما</li>
+                            <li class="text-black ">تماس با ما</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>
+                        <span class="text-black border-bottom border-secondary p-1">
+                                ارتباط با ما
+                        </span>
+                        </h2>
+                        <div class="social-icon pt-2">
+                            <a href="" class="text-decoration-none">
+                                <i class="fa fa-telegram social-icon-blue"></i>
+                            </a>
+                            <a href="" class="text-decoration-none">
+                                <i class="fa fa-twitter social-icon-blue"></i>
+                            </a>
+                            <a href="" class="text-decoration-none">
+                                <i class="fa fa-youtube social-icon-red"></i>
+                            </a>
+                            <a href="" class="text-decoration-none">
+                                <i class="fa fa-instagram social-icon-inst"></i>
+                            </a>
+                            <a href="" class="text-decoration-none">
+                                <i class="fa fa-whatsapp social-icon-green"></i>
+                            </a>
+                            <a href="" class="text-decoration-none">
+                                <i class="fa fa-linkedin social-icon-blue"></i>
+                            </a>
+                        </div>
+                        <div class="row pt-3">
+                            <div class="col-6">
+                                <img src="{% static "core/images/sabt.png" %}" alt="namad sabt" class="img-thumbnail">
+                            </div>
+                            <div class="col-6">
+                                <img src="{% static "core/images/enamad.png" %}" alt="e namad" class="img-thumbnail">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
