--- a/apps/store/templates/learning/category.html
+++ b/apps/store/templates/learning/category.html
@@ -7,6 +7,7 @@
     <div id="" class="wide">
         <div class="filter row">
             <div class="blog-categoty col-4">
+                دسته بندی&nbsp;:
                 <a type="button" class="btn  btn-sm btn-tag" href="{% url "store:learning_home" %}">همه</a>
                 {% for cat in categories %}
                     <a type="button" class="btn
@@ -35,7 +36,7 @@
                         <a class="post-title" href="{{ post.get_absolute_url }}"><h1>{{ post.title }}</h1></a>
                         <strong class="post-date">{{ post.pub_date|jformat:'%Y/%m/%d' }}</strong>
                         <a href="{{ post.get_absolute_url }}">
-                            <img class="" src="{{ post.picture.url }}" alt="">
+                            <img class="blog-index-pic" src="{{ post.picture.url }}" alt="">
                         </a>
                     </div>
                 </div>
