--- a/apps/store/templates/learning/index.html
+++ b/apps/store/templates/learning/index.html
@@ -7,17 +7,11 @@
     <div id="" class="wide">
         <div class="filter row">
             <div class="blog-categoty col-4">
+                دسته بندی&nbsp;:
                 <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:learning_home" %}">همه</a>
                 {% for cat in categories %}
                     <a type="button" class="btn btn-light btn-sm btn-tag"
                        href="{% url "store:learning_category" cat.name %}">{{ cat.name }}</a>
-                {% endfor %}
-            </div>
-            <div class="blog-tag col-8">
-                <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:learning_home" %}">همه</a>
-                {% for tag in tags %}
-                    <a type="button" class="btn btn-light btn-sm btn-tag"
-                       href="{% url "store:learning_tag" %}?tag={{ tag }}">{{ tag }}</a>
                 {% endfor %}
             </div>
         </div>
