--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -3,10 +3,10 @@
 {% block content %}
     <!-- Page Content -->
     <!-- Highlighs / Slideshow -->
-    <div>
-        <a href="https://t.me/s_sayadlou" target=”_blank”>telegram</a>
-        <a href="https://wa.me/+989123346829" target=”_blank”>whatsapp</a>
-    </div>
+{#    <div>#}
+{#        <a href="https://t.me/s_sayadlou" target=”_blank”>telegram</a>#}
+{#        <a href="https://wa.me/+989123346829" target=”_blank”>whatsapp</a>#}
+{#    </div>#}
     <div id="highlights" class="wide">
         <div
                 id="carouselExampleControls"
