--- a/apps/core/static/core/css/saeid.css
+++ b/apps/core/static/core/css/saeid.css
@@ -60,3 +60,7 @@
     box-shadow: inset 0 0 0 50px #23C261;
     padding: 0.5rem 0.5rem;
 }
+.social-icon a{
+    padding-left: 0.35rem;
+    padding-right: 0.35rem;
+}
