add filler for picture managment

--- a/apps/blog/templates/blog/slug.html
+++ b/apps/blog/templates/blog/slug.html
@@ -4,6 +4,9 @@
 {% block content %}
     <div id="page-top" class="wide">
         <!-- Single Service Item ////////// Just this Section is changed! -->
+        <div style="float: left ; padding: 1vw;">
+            <img class="img-fluid" style="max-width: 40vw" src="{{ object.picture.url }}" alt="">
+        </div>
         <div class="post-item">
             <div class="post-name">
                 <h1> {{ object.title }}</h1>
