--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -154,7 +154,8 @@
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2>
+                        <div class="pe-5">
+                            <h2>
                         <span class="text-black border-bottom border-secondary p-1">
                                 لینک های مفید
                         </span>
@@ -181,6 +182,8 @@
                                 </a>
                             </li>
                         </ul>
+                        </div>
+
                     </div>
                     <div class="col-lg-4">
                         <h2>
