--- a/apps/core/static/core/css/saeid.css
+++ b/apps/core/static/core/css/saeid.css
@@ -60,6 +60,7 @@
     box-shadow: inset 0 0 0 50px #23C261;
     padding: 0.5rem 0.5rem;
 }
+
 .social-icon a {
     padding-left: 0.35rem;
     padding-right: 0.35rem;
@@ -67,4 +68,15 @@
 
 img {
     border-radius: 5px
+}
+
+.over_flow {
+    max-height: 40vh;
+    overflow: auto;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: clip; /* Add vertical scrollbar */
+}
+
+.over_flow::-webkit-scrollbar {
+  display: block;
 }
