--- a/apps/core/static/core/css/style.css
+++ b/apps/core/static/core/css/style.css
@@ -323,10 +323,27 @@ tr, td {
 		background-size: cover;
 		padding: 5px;
 	}
+
 	.socialnw img {
 		width: 26px;
-    	height: 26px;
+		height: 26px;
 		float: left;
 	}
-  }
+}
 
+.tabs img {
+	float: left;
+	width: 30%;
+	border-radius: 5px;
+	padding-right: 15px;
+}
+
+.card {
+	text-align: center !important;
+}
+
+.card img {
+	width: 20%;
+	margin-bottom: 10px;
+	margin-bottom: 10px;
+}
