--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -99,7 +99,7 @@
                     <li><a href="{% url "store:service_home" %}">خدمات</a></li>
                     <li><a href="{% url "store:event_home" %}">رویداد ها</a></li>
                     <li><a href="{% url "store:learning_home" %}">آموزش</a></li>
-                    <li><a href="{% url "blog:home" %}">بلاگ</a></li>
+                    <li><a href="{% url "blog:home" %}">وبلاگ</a></li>
                     <li><a href="{% url "core:about_us" %}">درباره ما</a></li>
                     <li><a href="{% url "contact_us:form" %}">ارتباط با ما</a></li>
                 </ul>
