event new style

--- a/apps/core/static/core/css/saeid.css
+++ b/apps/core/static/core/css/saeid.css
@@ -87,3 +87,10 @@ img {
 .over_flow::-webkit-scrollbar {
   display: block;
 }
+.s-footer a {
+    text-decoration: none;
+}
+.s-footer img {
+    width: 70%;
+    max-height: 100px !important;
+}
