mobile menu fix

--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -160,7 +160,7 @@
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <div class="pe-5">
+                        <div class="pe-lg-5">
                             <h2>
                         <span class="text-black border-bottom border-secondary p-1">
                                 لینک های مفید
