formalou add event policy remove

--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -189,7 +189,6 @@
                                 </li>
                             </ul>
                         </div>
-
                     </div>
                     <div class="col-lg-4">
                         <h2>
@@ -201,21 +200,21 @@
                             <a href="" class="text-decoration-none">
                                 <i class="fa fa-telegram social-icon-blue"></i>
                             </a>
-                            <a href="" class="text-decoration-none">
-                                <i class="fa fa-twitter social-icon-blue"></i>
-                            </a>
-                            <a href="" class="text-decoration-none">
-                                <i class="fa fa-youtube social-icon-red"></i>
-                            </a>
+{#                            <a href="" class="text-decoration-none">#}
+{#                                <i class="fa fa-twitter social-icon-blue"></i>#}
+{#                            </a>#}
+{#                            <a href="" class="text-decoration-none">#}
+{#                                <i class="fa fa-youtube social-icon-red"></i>#}
+{#                            </a>#}
                             <a href="" class="text-decoration-none">
                                 <i class="fa fa-instagram social-icon-inst"></i>
                             </a>
                             <a href="" class="text-decoration-none">
                                 <i class="fa fa-whatsapp social-icon-green"></i>
                             </a>
-                            <a href="" class="text-decoration-none">
-                                <i class="fa fa-linkedin social-icon-blue"></i>
-                            </a>
+{#                            <a href="" class="text-decoration-none">#}
+{#                                <i class="fa fa-linkedin social-icon-blue"></i>#}
+{#                            </a>#}
                         </div>
                         <div class="row pt-3">
                             <div class="col-6">
