--- a/apps/store/templates/event/slug.html
+++ b/apps/store/templates/event/slug.html
@@ -14,7 +14,7 @@
                     <h1>{{ event.title }}</h1>
                 </div>
                 <hr>
-                {{ event.description | safe }}
+                {{ event.description }}
             </div>
             <div style="max-width: 50%">
                 <div class="event-info">
