--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -124,10 +124,8 @@
                 </video>
                 -->
                 <!-- FOR FUN !! :) -->
-                <div id="73832804035">
-                    <script type="text/JavaScript"
-                            src="https://www.aparat.com/embed/2QjXp?data[rnddiv]=73832804035&data[responsive]=yes"></script>
-                </div>
+
+                <div id="65895924565"><script type="text/JavaScript" src="https://www.aparat.com/embed/RJvUP?data[rnddiv]=65895924565&data[responsive]=yes"></script></div>
             </div>
         </div>
     </div>
