--- a/apps/contact_us/templates/contact_us/message_form.html
+++ b/apps/contact_us/templates/contact_us/message_form.html
@@ -2,76 +2,305 @@
 {% load i18n %}
 {% load static %}
 {% block content %}
-
-    <div class="embed-responsive" >
-        <iframe  class="embed-responsive-item" style="width: 100% ;min-height: 80vh"
-                src="https://formaloo.com/aradmohajer"></iframe>
-
+    <div id="welcome-text">
+        <div class="row justify-content-center">
+            <div class="col-4 d-flex justify-content-center">
+                <img style="max-width: 20vw" class="text-center" src="{% static "contact_us\img.png" %}"
+                     alt="arad mohajer">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-4 pt-2">
+                <h1 class="text-center" style="color: #1A237E;font-weight: bold;">فرم مشاوره تخصصی</h1>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-10 pt-2">
+                <p class="" style="color: #1A237E;">
+                    اطلاعات شما نزد ما محفوظ خواهد بود و جهت بررسی شرایط اولیه شما برای مهاجرت استفاده می گردد. این کار
+                    به
+                    این جهت هست که بر اساس شرایط و پتانسیل واقعی شما بهترین مسیر مهاجرتی معرفی شود. آرزوی توفیق و پیروزی
+                </p>
+                <p class="" style="color: #1A237E;">موسسه آراد مهاجر ماهان</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-1 pt-2 d-flex justify-content-center">
+                <a onclick="showForm()" class="btn btn-primary ">شروع</a>
+            </div>
+        </div>
     </div>
+    <form style="display: none" id="regForm" autocomplete="off" method="post" action="{% url 'contact_us:form' %}">
+
+        <!-- One " tab" for each step in the form: -->
+        {% for field in form.visible_fields %}
+            <div class="tab">
+                {{ field.label_tag }}
+                <h1>{{ field.help_text }}</h1>
+                {{ field }}
+                {{ field.errors }}
+            </div>
+        {% endfor %}
 
 
-    {#    <iframe src="https://formaloo.com/aradmohajer" frameborder="1"></iframe>#}
-    {#    <div id="page-top" class="wide">#}
-    {#        <!-- Single Service Item ////////// Just this Section is changed! -->#}
-    {#        <div id="user">#}
-    {#            <div class="row">#}
-    {#                <div class="col-lg-6">#}
-    {#                    <div class="user-form">#}
-    {#                        <h1>{% translate "Contact us" %}</h1>#}
-    {#                        <hr>#}
-    {#                        <form autocomplete="off" method="post" action="{% url 'contact_us:form' %}">#}
-    {#                            {% csrf_token %}#}
-    {#                            <div class="row">#}
-    {#                                <div class="form-group col-12">#}
-    {#                                    <div class="mb-3">#}
-    {#                                        <div>#}
-    {#                                            {{ form.subject.label_tag }}#}
-    {#                                        </div>#}
-    {#                                        {{ form.subject }}#}
-    {#                                        {{ form.subject.errors }}#}
-    {#                                    </div>#}
-    {#                                    <div class="mb-3">#}
-    {#                                        <div>#}
-    {#                                            {{ form.phone.label_tag }}#}
-    {#                                        </div>#}
-    {#                                        {{ form.phone }}#}
-    {#                                        {{ form.phone.errors }}#}
-    {#                                    </div>#}
-    {#                                    <div class="mb-3">#}
-    {#                                        <div>#}
-    {#                                            {{ form.email.label_tag }}#}
-    {#                                        </div>#}
-    {#                                        {{ form.email }}#}
-    {#                                        {{ form.email.errors }}#}
-    {#                                    </div>#}
-    {#                                    <div class="mb-3">#}
-    {#                                        <div>#}
-    {#                                            {{ form.content.label_tag }}#}
-    {#                                        </div>#}
-    {#                                        {{ form.content }}#}
-    {#                                        {{ form.content.errors }}#}
-    {#                                    </div>#}
-    {#                                    <div class="mb-3">#}
-    {#                                        <div>#}
-    {#                                            {{ form.owner.label_tag }}#}
-    {#                                        </div>#}
-    {#                                        {{ form.owner }}#}
-    {#                                        {{ form.owner.errors }}#}
-    {#                                    </div>#}
-    {#                                </div>#}
-    {#                                {{ form.captcha }}#}
-    {#                                {{ form.captcha.errors }}#}
-    {#                            </div>#}
-    {#                            <button type="submit" class="mt-1 btn btn-primary">{% translate "Create account" %}</button>#}
-    {#                        </form>#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#                <div class="col-lg-6 mt-5">#}
-    {#                    {% if form.password1.help_text %}#}
-    {#                        <p class="help">{{ form.password1.help_text|safe }}</p>#}
-    {#                    {% endif %}#}
-    {#                </div>#}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </div>#}
+        <div style="overflow:auto;">
+            <div style="float:right;">
+                <a class="btn btn-outline-primary " type="button" id="prevBtn" onclick="nextPrev(-1)">
+                    Previous
+                </a>
+                <a class="btn btn-outline-primary " type="button" id="nextBtn" onclick="nextPrev(1)">
+                    Next
+                </a>
+            </div>
+        </div>
+
+        <!-- Circles which indicates the steps of the form: -->
+        <div style="text-align:center;margin-top:40px;">
+
+            {% for field in form.visible_fields %}
+                <span class="step"></span>
+            {% endfor %}
+        </div>
+
+    </form>
+    <style>
+        /* Style the form */
+        #regForm {
+            background-color: #ffffff;
+            margin: 100px auto;
+            padding: 40px;
+            width: 70%;
+            min-width: 300px;
+        }
+
+        /* Style the input fields */
+        input {
+            padding: 10px;
+            width: 100%;
+            font-size: 17px;
+            font-family: Raleway;
+            border: 1px solid #aaaaaa;
+        }
+
+        /* Mark input boxes that gets an error on validation: */
+        input.invalid {
+            background-color: #ffdddd;
+        }
+
+        /* Hide all steps by default: */
+        .tab {
+            display: none;
+        }
+
+        /* Make circles that indicate the steps of the form: */
+        .step {
+            height: 15px;
+            width: 15px;
+            margin: 0 2px;
+            background-color: #bbbbbb;
+            border: none;
+            border-radius: 50%;
+            display: inline-block;
+            opacity: 0.5;
+        }
+
+        /* Mark the active step: */
+        .step.active {
+            opacity: 1;
+        }
+
+        /* Mark the steps that are finished and valid: */
+        .step.finish {
+            background-color: #04AA6D;
+        }
+    </style>
+    <script>
+        document.querySelectorAll('.form-control').forEach(item => {
+            item.addEventListener('change', event => {
+                {#event.classList.add("active");#}
+                console.log()
+                event.target.classList.remove("invalid")
+            })
+        })
+
+
+        function validateEmail(email) {
+            return String(email)
+                .toLowerCase()
+                .match(
+                    /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
+                )
+        }
+
+        var currentTab = 0; // Current tab is set to be the first tab (0)
+        showTab(currentTab); // Display the current tab
+
+        function showTab(n) {
+            // This function will display the specified tab of the form ...
+            var x = document.getElementsByClassName("tab");
+            x[n].style.display = "block";
+            // ... and fix the Previous/Next buttons:
+            if (n === 0) {
+                document.getElementById("prevBtn").style.display = "none";
+            } else {
+                document.getElementById("prevBtn").style.display = "inline";
+            }
+            if (n === (x.length - 1)) {
+                document.getElementById("nextBtn").innerHTML = "Submit";
+            } else {
+                document.getElementById("nextBtn").innerHTML = "Next";
+            }
+            // ... and run a function that displays the correct step indicator:
+            fixStepIndicator(n)
+        }
+
+        function nextPrev(n) {
+            // This function will figure out which tab to display
+            var x = document.getElementsByClassName("tab");
+            // Exit the function if any field in the current tab is invalid:
+            if (n === 1 && !validateForm()) return false;
+            // Hide the current tab:
+            x[currentTab].style.display = "none";
+            // Increase or decrease the current tab by 1:
+            currentTab = currentTab + n;
+            // if you have reached the end of the form... :
+            if (currentTab >= x.length) {
+                //...the form gets submitted:
+                document.getElementById("regForm").submit();
+                return false;
+            }
+            // Otherwise, display the correct tab:
+            showTab(currentTab);
+        }
+
+        function validateForm() {
+            // This function deals with validation of the form fields
+            var x, y, i, valid = true;
+            x = document.getElementsByClassName("tab");
+            y = x[currentTab].getElementsByTagName("input");
+            // A loop that checks every input field in the current tab:
+            for (i = 0; i < y.length; i++) {
+                // If a field is empty...
+                if (y[i].value === "") {
+                    // add an "invalid" class to the field:
+                    y[i].className += " invalid";
+                    // and set the current valid status to false:
+                    valid = false;
+                }
+                if (y[i].type === "email") {
+                    if (!validateEmail(y[i].value)) {
+                        y[i].className += " invalid";
+                        // and set the current valid status to false:
+                        valid = false;
+                    }
+                }
+            }
+            // If the valid status is true, mark the step as finished and valid:
+            if (valid) {
+                document.getElementsByClassName("step")[currentTab].className += " finish";
+            }
+            return valid; // return the valid status
+        }
+
+        function fixStepIndicator(n) {
+            // This function removes the "active" class of all steps...
+            var i, x = document.getElementsByClassName("step");
+            for (i = 0; i < x.length; i++) {
+                x[i].className = x[i].className.replace(" active", "");
+            }
+            //... and adds the "active" class to the current step:
+            x[n].className += " active";
+        }
+
+        function showForm() {
+            var welcomeTxt = document.getElementById('welcome-text');
+            var form = document.getElementById('regForm');
+            welcomeTxt.style.display = 'none'
+            form.style.display = 'block'
+        }
+
+
+        {##}
+        {#var currentTab = 0; // Current tab is set to be the first tab (0)#}
+        {#showTab(currentTab); // Display the current tab#}
+        {##}
+        {#function showTab(n) {#}
+        {#    // This function will display the specified tab of the form ...#}
+        {#    var x = document.getElementsByClassName("tab");#}
+        {#    x[n].style.display = "block";#}
+        {#    // ... and fix the Previous/Next buttons:#}
+        {#    if (n === 0) {#}
+        {#        document.getElementById("prevBtn").style.display = "none";#}
+        {#    } else {#}
+        {#        document.getElementById("prevBtn").style.display = "inline";#}
+        {#    }#}
+        {#    if (n === (x.length - 1)) {#}
+        {#        document.getElementById("nextBtn").innerHTML = "Submit";#}
+        {#    } else {#}
+        {#        document.getElementById("nextBtn").innerHTML = "Next";#}
+        {#    }#}
+        {#    // ... and run a function that displays the correct step indicator:#}
+        {#    fixStepIndicator(n)#}
+
+        {##}
+        {#function nextPrev(n) {#}
+        {#    // This function will figure out which tab to display#}
+        {#    var x = document.getElementsByClassName("tab");#}
+        {#    // Exit the function if any field in the current tab is invalid:#}
+        {#    if (n === 1 && !validateForm()) return false;#}
+        {#    // Hide the current tab:#}
+        {#    x[currentTab].style.display = "none";#}
+        {#    // Increase or decrease the current tab by 1:#}
+        {#    currentTab = currentTab + n;#}
+        {#    // if you have reached the end of the form... :#}
+        {#    if (currentTab >= x.length) {#}
+        {#        //...the form gets submitted:#}
+        {#        document.getElementById("regForm").submit();#}
+        {#        return false;#}
+        {#    }#}
+        {#    // Otherwise, display the correct tab:#}
+        {#    showTab(currentTab);#}
+
+        {##}
+        {#function validateForm() {#}
+        {#    // This function deals with validation of the form fields#}
+        {#    var x, y, i, valid = true;#}
+        {#    x = document.getElementsByClassName("tab");#}
+        {#    y = x[currentTab].getElementsByTagName("input");#}
+        {#    // A loop that checks every input field in the current tab:#}
+        {#    for (i = 0; i < y.length; i++) {#}
+        {#        // If a field is empty...#}
+        {#        if (y[i].value === "") {#}
+        {#            // add an "invalid" class to the field:#}
+        {#            y[i].classList.add("invalid");#}
+        {#            // and set the current valid status to false:#}
+        {#            valid = false;#}
+        {#        }#}
+        {#        if (y[i].type === "email") {#}
+        {#            console.log(y[i].value)#}
+        {#            if (validateEmail(y[i].value)) {#}
+        {#                console.log(y[i])#}
+        {#                y[i].classList.add("invalid");#}
+        {#                // and set the current valid status to false:#}
+        {#                valid = false;#}
+        {#            }#}
+        {#        }#}
+        {#    }#}
+        {#    // If the valid status is true, mark the step as finished and valid:#}
+        {#    if (valid) {#}
+        {#        document.getElementsByClassName("step")[currentTab].classList.add("finish");#}
+        {#    }#}
+        {#    return valid; // return the valid status#}
+
+        {##}
+        {#function fixStepIndicator(n) {#}
+        {#    // This function removes the "active" class of all steps...#}
+        {#    var i, x = document.getElementsByClassName("step");#}
+        {#    for (i = 0; i < x.length; i++) {#}
+        {#        x[i].className = x[i].classList.replace("active", "");#}
+        {#    }#}
+        {#    //... and adds the "active" class to the current step:#}
+        {#    x[n].classList.add("active");#}
+
+    </script>
 {% endblock content %}
